#5.3 Using Supabase Client

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:typegen": "supabase gen types typescript --project-id kpsvegqcnrjggasjqrir > database.types.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
@@ -22,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-router/node": "^7.0.1",
     "@react-router/serve": "^7.0.1",
+    "@supabase/supabase-js": "^2.47.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
