--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "type-fest": "^4.35.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
