--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-router/node": "^7.0.1",
     "@react-router/serve": "^7.0.1",
-    "@supabase/supabase-js": "^2.47.5",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
