--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-router/serve": "^7.0.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@tosspayments/tosspayments-sdk": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
